<resources>
    <string name="app_name">H. Susana Lopez...</string>

    <!-- Botones> -->
    <string name="ingresar">ingresar</string>
    <string name="nuevo_usuario">nuevoUsuario</string>
    <string name="modificar_informacion">modificarInfo</string>
    <string name="reportes">reportes</string>
    <string name="registrar">registrar</string>

    <!-- Componentes de radio button> -->
    <string name="rb_masculino">Masculino</string>
    <string name="rb_femenino">Femenino</string>
    <string name="rb_otro">Otro</string>

    <string name="rb_portero">Portero</string>
    <string name="rb_administrador">Administrador</string>
    <string name="rb_medico">Medico</string>
    <string name="rb_administrativo">Administrativo</string>

    <!-- Componentes de datos de usuario -->
    <string name="txtNombre">Nombre</string>
    <string name="txtCedula">Cedula</string>
    <string name="txtTelefono">Telefono</string>
    <string name="txtDireccion">Direccion</string>
    <string name="txtContraseña">Contrasena</string>
    <string name="name_hospital">HOSPITAL SUSANA LOPEZ DE VALENCIA</string>
    <string name="explication_software">SOFTWARE PARA INGRESO Y VALIDACION DE PACIANTES PARA CITAS DE CONSULTA EXTERNA</string>


    <!-- Componentes de Spinner de roles -->
    <string-array name="roles">
        <item>
            administrador
        </item>
        <item>
            medico
        </item>
        <item>
            Administrativo
        </item>
        <item>
            portero
        </item>
    </string-array>

    <!-- Componentes de Spinner de genero -->
    <string-array name="genero">
        <item>
            Mujer
        </item>
        <item>
            Hombre
        </item>
        <item>
            Otro
        </item>
    </string-array>

    <string-array name="items_type_quote">
        <item>Consulta médica general</item>
        <item>Consulta de especialista</item>
        <item>Cita de control o seguimiento</item>
        <item>Consulta preoperatoria</item>
        <item>Cita de resultados de pruebas</item>
        <item>Consulta de salud de la mujer</item>
        <item>Cita de salud del niño</item>
        <item>Cita de control de enfermedades crónicas</item>
        <item>Cita de terapia o rehabilitación</item>
        <item>Cita de salud mental</item>
        <item>Cita de atención urgente</item>
        <item>Cita para pruebas diagnósticas</item>
        <item>Cita de planificación familiar</item>
        <item>Cita de nutrición o dieta</item>
        <item>Cita de segunda opinión</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Eliminar</string>
    <string name="add_new">Añadir nuevo</string>
    <string name="logout">Cerrar sesión</string>
    <string name="name_user">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="info_paciente">Información del paciente</string>
    <string name="date">Fecha</string>


</resources>