<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="596dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/rectangulotitulo" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="587dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@mipmap/gruponueve" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@mipmap/imagencorpo" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="241dp"
        android:layout_marginBottom="129dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logofondo" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/rectanguloabajo" />

    <ImageButton
        android:id="@+id/btNuevoUsuario"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="353dp"
        android:layout_marginEnd="109dp"
        android:contentDescription="@string/nuevo_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/nuevousuario" />

    <ImageButton
        android:id="@+id/bt_modificarInfo"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="109dp"
        android:contentDescription="@string/modificar_informacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNuevoUsuario"
        app:srcCompat="@mipmap/modificarinformacion" />

    <ImageButton
        android:id="@+id/bt_reportes"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="134dp"
        android:contentDescription="@string/reportes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_modificarInfo"
        app:srcCompat="@mipmap/reportes" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/linea" />

    <TextView
        android:id="@+id/txt_administrador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="@font/arial_rounded_mt_bold"
        android:text="ADMINISTRADOR"
        android:textColor="@color/azul"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/arial_rounded_mt_bold"
        android:text="HOSPITAL SUSANA LOPEZ DE VALENCIA"
        android:textColor="@color/verde_oscuro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/arial_rounded_mt_bold"
        android:text="SOFTWARE PARA INGRESO Y VALIDACION DE PACIANTES PARA  CITAS DE CONSULTA EXTERNA"
        android:textAlignment="center"
        android:textColor="@color/verde_oscuro"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>